# price-list-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BRIEF.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0006-callback-id-strategy.md  0007-uz-normalization-table.md  0008-transport-and-shutdown.md  0009-service-account-secret-delivery.md  0012-services-view-boundary.md  0013-bot-navigation-and-rendering.md
src/: __init__.py  config.py  logging_setup.py  main.py
src/bot/: __init__.py  callbacks.py  delivery.py  keyboards.py  states.py
src/data/: __init__.py  auth.py  cache.py  coerce.py  fetch.py  models.py  parse.py  refresh.py  sample.py
src/locales/: __init__.py  ru.py  uz.py
src/services/: __init__.py  catalog.py  formatting.py  ids.py  index.py  language.py  models.py  normalize.py  pagination.py  search.py
tests/: conftest.py  test_config.py  test_logging_setup.py  test_main_builders.py  test_main_dispatcher.py  test_main_shutdown.py  test_sample_catalog.py  test_scaffold_layout.py  test_socket_guard.py
tests/bot/: conftest.py  test_callbacks.py  test_conftest_bot.py  test_delivery.py  test_dod_integration.py  test_h_catalog.py  test_h_search.py  test_h_start.py  test_keyboards.py  test_locales_bot_keys.py  test_mw_language.py  test_mw_throttle.py  test_states.py
tests/data/: test_auth.py  test_cache.py  test_coerce.py  test_fetch.py  test_models.py  test_parse.py  test_parse_schema.py  test_refresh.py
tests/fixtures/: __init__.py
(+24 files in other folders)
